# article-extractor

./: Cargo.toml
src/: article.rs  lib.rs  title.rs
src/title/: mod.rs  title.rs  titles_extractor.rs
tests/: test_article.rs  test_get_title.rs  test_title_extractor.rs
tests/data/: example.html  example.json  example_with_fb.html  example_with_fb.json  example_without_title.html  example_without_title.json
