[package]
name = "article-extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.13.0"
regex = "1.5.6"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
